--- a/ess.html
+++ b/ess.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Libre Baskerville' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<meta charset="utf-8">
 	<title>Histoire d’Internet</title>
 </head>
 <body>
-<h1>Page1 Histoire de l'internet </h1>
-
-<p>
+<h1>Histoire de l'internet</h1>
+<p class="papa">
 	L’​ <strong>histoire d'Internet​</strong> remonte au développement des premiers réseaux de télécommunication.
 L’idée d’un réseau informatique, permettant aux utilisateurs de différents ordinateurs de
 communiquer, se développa par de nombreuses étapes successives. La somme de tous ces
@@ -20,22 +21,22 @@ télécommunications.</p>
 <p>Deux phases d'accélérations se produisirent : à la fin des années 1960-1970, l’application
 pratique des concepts évoqués à la fin des années 1950 et ensuite, dans les années 1990,
 lorsque la popularisation des fondements de l’Internet moderne passa par l’apparition du World
-Wide Web<a href="https://russe.html"> lien vers la page World Wide Web</a></p>
+Wide Web<a href="russe.html"> lien vers la page World Wide Web</a></p>
 
-<p>L’infrastructure d’Internet se répandit autour du monde pour créer le large réseau mondial
+<p class="papa">L’infrastructure d’Internet se répandit autour du monde pour créer le large réseau mondial
 d’ordinateurs que nous connaissons aujourd’hui. Il se répandit au travers des pays occidentaux
 puis frappa à la porte des pays en voie de développement, créant ainsi un accès mondial à
 l’information et aux communications sans précédent ainsi qu’une fracture numérique. Internet
 contribua à modifier fondamentalement l’économie mondiale, y compris avec les retombées de
 la bulle Internet.</p>
 
-<h3>Chronologie sélective</h3>
+<h2>Chronologie sélective</h2>
 <table >
-<tr>
-	<th>Année:</th>
-	<th>Evenement</th>
+<tr class="tete">
+	<th class="pied">Année:</th>
+	<th class="pied">Evenement</th>
 </tr>
-<tr>
+<tr class="bebe">
 	<th>
 		1952
 	</th>
@@ -54,7 +55,7 @@ ordinateurs à autant de radars.
 données binaires sur une simple ligne téléphonique.
 	</th>
 </tr>
-	<tr>
+	<tr class="bebe">
 		<th>
 		1961
 	</th>
@@ -73,7 +74,7 @@ américain​ , où​ J.C.R. Licklider​ défend avec succès ses idées relat
 global d'ordinateurs.
 	</th>
 	</tr>
-	<tr>
+	<tr class="bebe">
 		<th>
 		1964
 	</th>
@@ -91,7 +92,7 @@ global d'ordinateurs.
 		Première conférence sur​ ARPANET​ .
 	</th>
 	</tr>
-	<tr>
+	<tr class="bebe"> 
 		<th>
 		1969
 	</th>
@@ -111,7 +112,7 @@ Tomlinson​ .
 	</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1972
 	</th>
@@ -129,7 +130,7 @@ ordinateur.
 	</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1972
 	</th>
@@ -147,7 +148,7 @@ gestion d’Internet.
 	</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1979
 	</th>
@@ -165,7 +166,7 @@ américains.
 		Adoption du protocole​ TCP/IP​ et du mot « ​ Internet​ ».
 	</th>
 	</tr>
-<tr>
+<tr class="bebe">
 		<th>
 		1983
 	</th>
@@ -181,7 +182,7 @@ américains.
 		1 000 ordinateurs connectés.</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1987
 	</th>
@@ -197,7 +198,7 @@ américains.
 		1 000 000 ordinateurs connectés.</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1990
 	</th>
@@ -213,7 +214,7 @@ américains.
 		Annonce publique du​ World Wide Web​ (​ Tim Berners-Lee​ ).</th>
 	</tr>
 
-	<tr>
+	<tr class="bebe">
 		<th>
 		1992
 	</th>
@@ -228,7 +229,7 @@ américains.
 	<th>
 		Apparition du​ Navigateur web​ NCSA Mosaic​.</th>
 	</tr>
-<tr>
+<tr class="bebe">
 		<th>
 		1996
 	</th>
@@ -242,7 +243,7 @@ américains.
 	<th>
 		Explosion de la​ bulle Internet​ (368 540 000 ordinateurs connectés).</th>
 	</tr>
-	<tr>
+	<tr class="bebe">
 		<th>
 		2014
 	</th>
@@ -251,12 +252,12 @@ américains.
 	</tr>
 </table>
 <figure>
-<img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/First_Web_Server.jpg"  width="400" height="400"/> 
+<img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/First_Web_Server.jpg"/> 
 <figcaption>
 Fig.1 - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
-server. DO NOT POWER IT DOWN!!</figcaption>
+server. DO NOT POWER IT DOWN!!≫</figcaption>
 </figure> ​
-<h3><strong>Protocole TCP/IP</strong></h3>
+<h2><strong>Protocole TCP/IP</strong></h2>
 
 <p>L'abondante diversité des méthodes de communications réseau amena un besoin
 d'uniformisation. Robert E. Kahn recruta Vinton G. Cerf de l'université Stanford dans le but de
@@ -267,14 +268,14 @@ avec l'ARPANET, les hôtes en étaient maintenant responsables. Vinton G. Cerf a
 Hubert Zimmermann et Louis Pouzin (développeurs du réseau Cyclades) un important travail de
 développement. </p>
 
-<p>Avec le rôle du réseau physique réduit à son strict minimum, il devint alors possible de
+<div>Avec le rôle du réseau physique réduit à son strict minimum, il devint alors possible de
 fusionner à peu près tout type de réseau sans tenir compte de leurs caractéristiques et ainsi
 résoudre le problème que s'était posé Robert E. Kahn à ses débuts. La DARPA accepta de
 financer le développement du logiciel prototype, et après plusieurs années de travail, la
 première démonstration quelque peu rustique de ce qu'était alors devenu le TCP/IP eut lieu en
 juillet 1977. Cette nouvelle méthode se répandit au travers des réseaux, et le 1​ er​ janvier 1983
 les protocoles TCP/IP devenaient officiellement le seul protocole sur l'ARPANET, remplaçant le
-précédent protocole NCP2.</p>
+précédent protocole NCP2.</div>
 
 
 
