--- a/russe.html
+++ b/russe.html
@@ -2,18 +2,19 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css"  href="style.css">
     <title>wold wide web</title>
 </head>
 <body>
 
-            <h1>Page 2: Wold wide web</h1>
+            <h1>Wold wide web</h1>
             <p>
             le <strong> World Wide Web</strong> (litt. la « toile (d’araignée) mondiale », abrégé www ou le Web), le réseau
             mondial ou la Toile, est un système hypertexte public fonctionnant sur Internet. Le Web permet
             de consulter, avec un navigateur, des pages accessibles sur des sites. L’image de la toile
             d’araignée vient des hyperliens qui lient les pages web entre elles.
             </p>
-            <p>Le Web n’est qu’une des applications d’Internet<a href="http://ess.html/">[lien vers la page Histoire d’Internet]</a>
+            <p>Le Web n’est qu’une des applications d’Internet<a href="ess.html">[lien vers la page Histoire d’Internet]</a>
             distincte
             d’autres applications comme le courrier électronique, la messagerie instantanée et le partage
             de fichiers en pair à pair. Le Web est inventé le 12 mars 1989 au CERN, à Meyrin, près de
